<resources>
    <string name="app_name">Grupo1_TP2</string>
    <string name="textview_main_integrantes_gr1">Ayala Gastón, Díaz Juan Pablo, Encinas William Iván, Orellano Esteban Joselo, Silva Carlos Andrés</string>
    <!-- Labels -->
    <string name="label_main">EjercicioControles - Grupo 1</string>
    <string name="label_formulario1">EjercicioControles</string>
    <string name="label_contactos">Contactos</string>
    <!-- Opciones menu -->
    <string name="agregar_contactos">Agregar contactos</string>
    <string name="listado_de_contactos">Listado de contactos</string>


    <!--GA strings de formulario contacto -->
    <string name="headerFormulario">FORMULARIO DE CONTACTO</string>
    <string name="textoFromulario">Este es un formulario destinado al registro de personas, sus datos personales e intereses</string>
    <string name="tituloNombre">NOMBRE</string>
    <string name="tituloApellido">APELLIDO</string>
    <string name="tituloTelefono">TELÉFONO</string>
    <string name="tituloEmail">EMAIL</string>
    <string name="tituloDireccion">DIRECCIÓN</string>
    <string name="tituloFechaNac">FECHA DE NACIMIENTO</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintApellido">Apellido</string>
    <string name="hintTelefono">Telefono</string>
    <string name="hintEmail">Email</string>
    <string name="hintDireccion">Direccion</string>
    <string name="hintFechaNac">Fecha nacimiento</string>

    <string name="btnContinuar">CONTINUAR</string>

    <!-- JP - strings del formulario Mas Datos -->
    <string name="subtitFormularioMas">A continuación, por favor se pide  completar más datos personales</string>
    <string name="masDatosNivelEstudios">NIVEL ESTUDIOS ALCANZADO</string>
    <string name="masDatosIntereses">INTERESES</string>
    <string name="btnGuardar">GUARDAR</string>
    <string name="rdPrimIncompleto">Primario Incompleto</string>
    <string name="rdPrimCompleto">Primario Completo</string>
    <string name="rdSecuIncompleto">Secundario Incompleto</string>
    <string name="rdSecuCompleto">Secundario Completo</string>
    <string name="rdOtros">Otros</string>
    <string name="chkDeporte">Deporte</string>
    <string name="chkMusica">Música</string>
    <string name="chkArte">Arte</string>
    <string name="chkTecno">Tecnología</string>
    <string name="deseoRecibir">¿DESEA RECIBIR INFORMACION?</string>
    <string name="quieroMas">Sí</string>

</resources>